...
      {onEdit && (
        <SafeButton
          secondary
          size="$sm"
          backgroundColor={backdropOverlayBackground}
          textColor="$staticPrimaryLight"
          testID="edit-approval-button"
          onPress={() => onEdit(approval)}
        >
          Edit amount
        </SafeButton>
      )}
    </YStack>
...
      <YStack
        backgroundColor="$background"
        borderRadius="$4"
        padding="$4"
        gap="$4"
        marginTop="$4"
        testID="approval-editor"
      >
        <YStack gap="$1">
          <XStack gap="$2" alignItems="center">
            <SafeFontIcon
              name={hasHighValueApproval ? 'alert' : 'info'}
              testID={hasHighValueApproval ? 'approval-editor-warning-icon' : 'approval-editor-info-icon'}
...
