...
  if (!count) {
    return null
  }

  return (
    <SafeListItem
      label="Actions"
      rightNode={
        <View flexDirection="row" alignItems="center" gap="$2">
          <Badge themeName="badge_background_inverted" content={count} circleSize="$6" />
          <SafeFontIcon name={'chevron-right'} />
        </View>
      }
      onPress={handleViewActions}
      testID="actions-row"
    />
  )
}

