...
  }

  return (
    <>
      <Stack.Screen
        options={{
          title: 'Transaction details',
          headerRight: () => <ShareButton onPress={shareTransaction} testID="share-transaction-button" />,
        }}
      />
      <View flex={1}>
        <ScrollView contentContainerStyle={{ paddingBottom: Math.max(bottom, getTokenValue('$4')) }}>
          <View paddingHorizontal="$4">
            <HistoryTransactionView txDetails={txDetails} />
...
