...
      <View flexDirection="row" alignItems="center" gap="$1">
        <Text
          {...textProps}
          maxWidth={150}
          numberOfLines={1}
          ellipsizeMode="tail"
          testID="hash-display-name-or-address"
        >
          {displayName || shortenAddress(addressValue)}
        </Text>
        {showCopy && <CopyButton value={addressValue} size={sizeConfig.icon} color={iconColor} />}
      </View>

...
