appId: global.safe.mobileapp.ios
---
- assertVisible:
    id: 'view-on-explorer-button'
    containsDescendants:
      - text: 'View on Explorer'

- tapOn:
    id: 'view-on-explorer-button'

- tapOn:
    id: 'breadcrumb'
